css/app.css
::-moz-selection {
  background-color: rgba(255, 128, 8, 0.9);
  color: #fcfcfc; }

::selection {
  background-color: rgba(255, 128, 8, 0.9);
  color: #fcfcfc; }

.form-control:focus {
  border-color: #FF8008;
  box-shadow: inset 0 1px 1px rgba(255, 128, 8, 0.075), 0 0 8px rgba(255, 128, 8, 0.6); }

.btn:active:focus, .btn:focus {
  outline: 5px auto #FF8008; }

p {
  margin-bottom: 20px;
}

header .jumbotron {
  min-height: 75vh;
  background-image: url(../img/sunrise.jpg);
  background-size: cover;
  background-position: top center;
  background-repeat: no-repeat;
  color: #FCFCFC; }
header h1 {
  font-family: 'Raleway', sans-serif;
  font-weight: 600; }
header img {
  height: 55px;
  width: 55px;
  margin-right: 0.1em; }
header form {
  margin-top: 2em; }

#mc_embed_signup {
  margin-top: 2em; }

@media screen and (min-width: 768px) {
  header img {
    height: 82px;
    width: 83px; } }

